Ready tests For VF2-SI paper

--- a/arachne/subgraph_matching_random.ipynb
+++ b/arachne/subgraph_matching_random.ipynb
@@ -2,10 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "id": "f5cc6dde",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    _         _                   _       \n",
+      "   / \\   _ __| | _____  _   _  __| | __ _ \n",
+      "  / _ \\ | '__| |/ / _ \\| | | |/ _` |/ _` |\n",
+      " / ___ \\| |  |   < (_) | |_| | (_| | (_| |\n",
+      "/_/   \\_\\_|  |_|\\_\\___/ \\__,_|\\__,_|\\__,_|\n",
+      "                                          \n",
+      "\n",
+      "Client Version: v2024.06.21\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -17,7 +31,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Building property graph with 10000 vertices and 50084 edges took 2.34 seconds.\n",
+      "Building property graph with 100000 vertices and 4996865 edges took 23.2 seconds.\n",
       "Property graph created with random node and edge attributes.\n"
      ]
     }
@@ -31,9 +45,9 @@
     "import os\n",
     "import time\n",
     "\n",
-    "ak.connect(\"n64\", 5555)\n",
+    "ak.connect(\"n33\", 5555)\n",
     "p = 0.0005\n",
-    "num_nodes = 10_000\n",
+    "num_nodes = 100_000\n",
     "\n",
     "start = time.time()\n",
     "temp_prop_graph = ar.gnp(num_nodes, p, create_using=ar.PropGraph)\n",
@@ -100,9 +114,11 @@
     "\n",
     "### Create the subgraph we are searching for.\n",
     "# 1. Create labels and relationships to search for.\n",
-    "src_list = [0, 1, 2, 1]\n",
-    "dst_list = [1, 2, 0, 3]\n",
+    "# src_list = [0, 1, 2, 1]\n",
+    "# dst_list = [1, 2, 0, 3]\n",
     "\n",
+    "src_list = [2, 3, 1, 3]\n",
+    "dst_list = [3, 1, 2, 0]\n",
     "src_subgraph = ak.array(src_list)\n",
     "dst_subgraph = ak.array(dst_list)\n",
     "\n",
@@ -110,26 +126,18 @@
     "subgraph_nodes.sort()\n",
     "\n",
     "# labels1_subgraph = ak.array([\"blue\", \"blue\", \"red\", \"red\"])\n",
-    "labels2_subgraph = ak.array([10, 10, 10, 10])\n",
+    "labels2_subgraph = ak.array([10, 12, 10, 12])\n",
     "labels3_subgraph = ak.array([True, True, True, True])\n",
     "\n",
-    "rels1_subgraph = ak.array([10, 10, 10, 10])"
+    "rels1_subgraph = ak.array([10, 12, 10, 12])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "699b9036",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "We found 851.0 monos inside of the graph\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"VF2-SI STRUCTURAL\"\"\"\n",
     "edge_df_h = ak.DataFrame({\"src\": src_subgraph, \"dst\": dst_subgraph})\n",
@@ -146,69 +154,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "683ec7ee",
+   "execution_count": null,
+   "id": "61eb9176",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "We found 0.0 monos inside of the graph\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\"\"\"VF2-SI VERTEX PROBABILITIES\"\"\"\n",
+    "\"\"\"VF2-SI STRUCTURAL\"\"\"\n",
     "edge_df_h = ak.DataFrame({\"src\": src_subgraph, \"dst\": dst_subgraph})\n",
-    "node_df_h = ak.DataFrame({\"nodes\": ak.array(subgraph_nodes), \n",
-    "                          # \"lbls1\": labels1_subgraph, \n",
-    "                          \"lbls2\": labels2_subgraph,\n",
-    "                          \"lbls3\": labels3_subgraph\n",
-    "})\n",
     "\n",
     "sg = ar.PropGraph()\n",
     "sg.load_edge_attributes(edge_df_h, source_column=\"src\", destination_column=\"dst\")\n",
-    "sg.load_node_attributes(node_df_h, node_column=\"nodes\")\n",
     "\n",
     "isos_as_vertices = ar.subgraph_isomorphism(prop_graph, sg, \n",
-    "                                           semantic_check = \"and\", algorithm_type = \"si\", \n",
-    "                                           reorder = True, return_isos_as = \"vertices\")\n",
+    "                                           semantic_check = None, algorithm_type = \"si\", \n",
+    "                                           reorder = False, return_isos_as = \"vertices\")\n",
     "\n",
     "print(f\"We found {len(isos_as_vertices[0])/len(sg)} monos inside of the graph\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "544c2d14",
+   "execution_count": 4,
+   "id": "cf714770",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "We found 0.0 monos inside of the graph\n"
+      "We found 6249769.0 monos inside of the graph\n"
      ]
     }
    ],
    "source": [
-    "\"\"\"VF2-SI VERTEX AND EDGE PROBABILITIES\"\"\"\n",
-    "edge_df_h = ak.DataFrame({\"src\": src_subgraph, \"dst\": dst_subgraph, \n",
-    "                          \"rels1\": rels1_subgraph\n",
-    "})\n",
-    "node_df_h = ak.DataFrame({\"nodes\": ak.array(subgraph_nodes), \n",
-    "                          # \"lbls1\": labels1_subgraph, \n",
-    "                          \"lbls2\": labels2_subgraph,\n",
-    "                          \"lbls3\": labels3_subgraph\n",
-    "})\n",
+    "\"\"\"VF2-PS STRUCTURAL\"\"\"\n",
+    "edge_df_h = ak.DataFrame({\"src\": src_subgraph, \"dst\": dst_subgraph})\n",
     "\n",
     "sg = ar.PropGraph()\n",
     "sg.load_edge_attributes(edge_df_h, source_column=\"src\", destination_column=\"dst\")\n",
-    "sg.load_node_attributes(node_df_h, node_column=\"nodes\")\n",
     "\n",
     "isos_as_vertices = ar.subgraph_isomorphism(prop_graph, sg, \n",
-    "                                           semantic_check = \"and\", algorithm_type = \"si\", \n",
+    "                                           semantic_check = None, algorithm_type = \"ps\", \n",
     "                                           reorder = True, return_isos_as = \"vertices\")\n",
     "\n",
     "print(f\"We found {len(isos_as_vertices[0])/len(sg)} monos inside of the graph\")"
@@ -216,15 +202,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "5dabc71f",
+   "execution_count": 2,
+   "id": "9d65961a",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "We found 851.0 monos inside of the graph\n"
+      "We found 6249769.0 monos inside of the graph\n"
      ]
     }
    ],
@@ -244,18 +230,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
+   "id": "683ec7ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"VF2-SI VERTEX PROBABILITIES\"\"\"\n",
+    "edge_df_h = ak.DataFrame({\"src\": src_subgraph, \"dst\": dst_subgraph})\n",
+    "node_df_h = ak.DataFrame({\"nodes\": ak.array(subgraph_nodes), \n",
+    "                          # \"lbls1\": labels1_subgraph, \n",
+    "                          \"lbls2\": labels2_subgraph,\n",
+    "                          \"lbls3\": labels3_subgraph\n",
+    "})\n",
+    "\n",
+    "sg = ar.PropGraph()\n",
+    "sg.load_edge_attributes(edge_df_h, source_column=\"src\", destination_column=\"dst\")\n",
+    "sg.load_node_attributes(node_df_h, node_column=\"nodes\")\n",
+    "\n",
+    "isos_as_vertices = ar.subgraph_isomorphism(prop_graph, sg, \n",
+    "                                           semantic_check = \"or\", algorithm_type = \"si\", \n",
+    "                                           reorder = True, return_isos_as = \"vertices\")\n",
+    "\n",
+    "print(f\"We found {len(isos_as_vertices[0])/len(sg)} monos inside of the graph\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "544c2d14",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"VF2-SI VERTEX AND EDGE PROBABILITIES\"\"\"\n",
+    "edge_df_h = ak.DataFrame({\"src\": src_subgraph, \"dst\": dst_subgraph, \n",
+    "                          \"rels1\": rels1_subgraph\n",
+    "})\n",
+    "node_df_h = ak.DataFrame({\"nodes\": ak.array(subgraph_nodes), \n",
+    "                          # \"lbls1\": labels1_subgraph, \n",
+    "                          \"lbls2\": labels2_subgraph,\n",
+    "                          \"lbls3\": labels3_subgraph\n",
+    "})\n",
+    "\n",
+    "sg = ar.PropGraph()\n",
+    "sg.load_edge_attributes(edge_df_h, source_column=\"src\", destination_column=\"dst\")\n",
+    "sg.load_node_attributes(node_df_h, node_column=\"nodes\")\n",
+    "\n",
+    "isos_as_vertices = ar.subgraph_isomorphism(prop_graph, sg, \n",
+    "                                           semantic_check = \"or\", algorithm_type = \"si\", \n",
+    "                                           reorder = True, return_isos_as = \"vertices\")\n",
+    "\n",
+    "print(f\"We found {len(isos_as_vertices[0])/len(sg)} monos inside of the graph\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "c513c5e8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "We found 0.0 monos inside of the graph\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"VF2-PS VERTEX PROBABILITIES\"\"\"\n",
     "edge_df_h = ak.DataFrame({\"src\": src_subgraph, \"dst\": dst_subgraph})\n",
@@ -270,7 +302,7 @@
     "sg.load_node_attributes(node_df_h, node_column=\"nodes\")\n",
     "\n",
     "isos_as_vertices = ar.subgraph_isomorphism(prop_graph, sg, \n",
-    "                                           semantic_check = \"and\", algorithm_type = \"ps\", \n",
+    "                                           semantic_check = \"or\", algorithm_type = \"ps\", \n",
     "                                           reorder = False, return_isos_as = \"vertices\")\n",
     "\n",
     "print(f\"We found {len(isos_as_vertices[0])/len(sg)} monos inside of the graph\")"
@@ -278,18 +310,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "0edf75f7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "We found 0.0 monos inside of the graph\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"VF2-PS VERTEX AND EDGE PROBABILITIES\"\"\"\n",
     "edge_df_h = ak.DataFrame({\"src\": src_subgraph, \"dst\": dst_subgraph, \n",
@@ -306,7 +330,7 @@
     "sg.load_node_attributes(node_df_h, node_column=\"nodes\")\n",
     "\n",
     "isos_as_vertices = ar.subgraph_isomorphism(prop_graph, sg, \n",
-    "                                           semantic_check = \"and\", algorithm_type = \"ps\", \n",
+    "                                           semantic_check = \"or\", algorithm_type = \"ps\", \n",
     "                                           reorder = False, return_isos_as = \"vertices\")\n",
     "\n",
     "print(f\"We found {len(isos_as_vertices[0])/len(sg)} monos inside of the graph\")"
@@ -329,7 +353,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
