Orderin problem solved

--- a/arachne/subgraph_matching_random.ipynb
+++ b/arachne/subgraph_matching_random.ipynb
@@ -104,38 +104,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "f851652a",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    _         _                   _       \n",
-      "   / \\   _ __| | _____  _   _  __| | __ _ \n",
-      "  / _ \\ | '__| |/ / _ \\| | | |/ _` |/ _` |\n",
-      " / ___ \\| |  |   < (_) | |_| | (_| | (_| |\n",
-      "/_/   \\_\\_|  |_|\\_\\___/ \\__,_|\\__,_|\\__,_|\n",
-      "                                          \n",
-      "\n",
-      "Client Version: v2024.06.21\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "connected to arkouda server tcp://*:5555\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Networx Graph Generation\n",
-      "Building property graph with 10 vertices and 50 edges took 0.0 seconds.\n",
-      "Property graph created with random node and edge attributes.\n"
      ]
     }
    ],
@@ -149,8 +126,8 @@
     "import time\n",
     "\n",
     "ak.connect(\"n33\", 5555)\n",
-    "p = 0.5\n",
-    "num_nodes = 10\n",
+    "p = 0.0005\n",
+    "num_nodes = 50_000\n",
     "\n",
     "# Generate graph using NetworkX\n",
     "graph = nx.gnp_random_graph(num_nodes, p, directed=True)\n",
@@ -236,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "699b9036",
    "metadata": {},
    "outputs": [
@@ -244,7 +221,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "We found 363.0 monos inside of the graph\n"
+      "We found 4.0 monos inside of the graph\n"
      ]
     }
    ],
@@ -272,7 +249,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "We found 202.0 monos inside of the graph\n"
+      "We found 4.0 monos inside of the graph\n"
      ]
     }
    ],
@@ -292,10 +269,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "cf714770",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "We found 4.0 monos inside of the graph\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"VF2-PS STRUCTURAL TRUE\"\"\"\n",
     "edge_df_h = ak.DataFrame({\"src\": src_subgraph, \"dst\": dst_subgraph})\n",
@@ -312,10 +297,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "9d65961a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "We found 4.0 monos inside of the graph\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"VF2-PS STRUCTURAL FALSE\"\"\"\n",
     "edge_df_h = ak.DataFrame({\"src\": src_subgraph, \"dst\": dst_subgraph})\n",
@@ -332,10 +325,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "683ec7ee",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "We found 4.0 monos inside of the graph\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"VF2-SI VERTEX PROBABILITIES OR\"\"\"\n",
     "edge_df_h = ak.DataFrame({\"src\": src_subgraph, \"dst\": dst_subgraph})\n",
@@ -358,10 +359,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "ab9327ce",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "We found 0.0 monos inside of the graph\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"VF2-SI VERTEX PROBABILITIES AND\"\"\"\n",
     "edge_df_h = ak.DataFrame({\"src\": src_subgraph, \"dst\": dst_subgraph})\n",
@@ -384,10 +393,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "544c2d14",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "We found 4.0 monos inside of the graph\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"VF2-SI VERTEX AND EDGE PROBABILITIES OR\"\"\"\n",
     "edge_df_h = ak.DataFrame({\"src\": src_subgraph, \"dst\": dst_subgraph, \n",
@@ -412,10 +429,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "2c63f26a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "We found 4.0 monos inside of the graph\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"VF2-SI VERTEX AND EDGE PROBABILITIES AND\"\"\"\n",
     "edge_df_h = ak.DataFrame({\"src\": src_subgraph, \"dst\": dst_subgraph, \n",
@@ -440,10 +465,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "c513c5e8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "We found 4.0 monos inside of the graph\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"VF2-PS VERTEX PROBABILITIES TRUE\"\"\"\n",
     "edge_df_h = ak.DataFrame({\"src\": src_subgraph, \"dst\": dst_subgraph})\n",
@@ -466,10 +499,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "0edf75f7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "We found 4.0 monos inside of the graph\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"VF2-PS VERTEX AND EDGE PROBABILITIES\"\"\"\n",
     "edge_df_h = ak.DataFrame({\"src\": src_subgraph, \"dst\": dst_subgraph, \n",
