SEED added to gnp graph generation

--- a/arachne/subgraph_matching_random.ipynb
+++ b/arachne/subgraph_matching_random.ipynb
@@ -5,7 +5,23 @@
    "execution_count": null,
    "id": "f5cc6dde",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "connected to arkouda server tcp://*:5555\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Building property graph with 50000 vertices and 1250667 edges took 7.24 seconds.\n",
+      "Property graph created with random node and edge attributes.\n"
+     ]
+    }
+   ],
    "source": [
     "import arkouda as ak\n",
     "import arachne as ar\n",
@@ -16,8 +32,8 @@
     "import time\n",
     "\n",
     "ak.connect(\"n33\", 5555)\n",
-    "p = 0.3\n",
-    "num_nodes = 10\n",
+    "p = 0\n",
+    "num_nodes = 100_000\n",
     "\n",
     "start = time.time()\n",
     "temp_prop_graph = ar.gnp(num_nodes, p, create_using=ar.PropGraph)\n",
@@ -105,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f851652a",
+   "id": "90900732",
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +146,7 @@
     "num_nodes = 50_000\n",
     "\n",
     "# Generate graph using NetworkX\n",
-    "graph = nx.gnp_random_graph(num_nodes, p, directed=True)\n",
+    "graph = nx.gnp_random_graph(num_nodes, p, directed=True, seed=42)\n",
     "src_list, dst_list = zip(*graph.edges())\n",
     "src_ak = ak.array(src_list)\n",
     "dst_ak = ak.array(dst_list)\n",
@@ -139,7 +155,7 @@
     "temp_prop_graph = ar.PropGraph()\n",
     "end = time.time()\n",
     "build_time = end - start\n",
-    "print(\"Networx Graph Generation\")\n",
+    "print(\"networkx graph generation....\")\n",
     "print(f\"Building property graph with {num_nodes} vertices and \"\n",
     "      f\"{len(src_list)} edges took {round(build_time,2)} seconds.\")\n",
     "\n",
@@ -213,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "699b9036",
    "metadata": {},
    "outputs": [
@@ -221,7 +237,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "We found 4.0 monos inside of the graph\n"
+      "We found 388559.0 monos inside of the graph\n"
      ]
     }
    ],
@@ -241,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "61eb9176",
    "metadata": {},
    "outputs": [
@@ -249,7 +265,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "We found 4.0 monos inside of the graph\n"
+      "We found 388559.0 monos inside of the graph\n"
      ]
     }
    ],
@@ -269,18 +285,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "cf714770",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "We found 4.0 monos inside of the graph\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"VF2-PS STRUCTURAL TRUE\"\"\"\n",
     "edge_df_h = ak.DataFrame({\"src\": src_subgraph, \"dst\": dst_subgraph})\n",
@@ -297,18 +305,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "9d65961a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "We found 4.0 monos inside of the graph\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"VF2-PS STRUCTURAL FALSE\"\"\"\n",
     "edge_df_h = ak.DataFrame({\"src\": src_subgraph, \"dst\": dst_subgraph})\n",
@@ -325,18 +325,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "683ec7ee",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "We found 4.0 monos inside of the graph\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"VF2-SI VERTEX PROBABILITIES OR\"\"\"\n",
     "edge_df_h = ak.DataFrame({\"src\": src_subgraph, \"dst\": dst_subgraph})\n",
@@ -359,18 +351,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "ab9327ce",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "We found 0.0 monos inside of the graph\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"VF2-SI VERTEX PROBABILITIES AND\"\"\"\n",
     "edge_df_h = ak.DataFrame({\"src\": src_subgraph, \"dst\": dst_subgraph})\n",
@@ -393,18 +377,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "544c2d14",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "We found 4.0 monos inside of the graph\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"VF2-SI VERTEX AND EDGE PROBABILITIES OR\"\"\"\n",
     "edge_df_h = ak.DataFrame({\"src\": src_subgraph, \"dst\": dst_subgraph, \n",
@@ -429,18 +405,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "2c63f26a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "We found 4.0 monos inside of the graph\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"VF2-SI VERTEX AND EDGE PROBABILITIES AND\"\"\"\n",
     "edge_df_h = ak.DataFrame({\"src\": src_subgraph, \"dst\": dst_subgraph, \n",
@@ -465,18 +433,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "c513c5e8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "We found 4.0 monos inside of the graph\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"VF2-PS VERTEX PROBABILITIES TRUE\"\"\"\n",
     "edge_df_h = ak.DataFrame({\"src\": src_subgraph, \"dst\": dst_subgraph})\n",
@@ -499,18 +459,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "0edf75f7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "We found 4.0 monos inside of the graph\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"VF2-PS VERTEX AND EDGE PROBABILITIES\"\"\"\n",
     "edge_df_h = ak.DataFrame({\"src\": src_subgraph, \"dst\": dst_subgraph, \n",
