--- a/arachne/subgraph_matching_random_paper.ipynb
+++ b/arachne/subgraph_matching_random_paper.ipynb
@@ -2,24 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "f5cc6dde",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    _         _                   _       \n",
-      "   / \\   _ __| | _____  _   _  __| | __ _ \n",
-      "  / _ \\ | '__| |/ / _ \\| | | |/ _` |/ _` |\n",
-      " / ___ \\| |  |   < (_) | |_| | (_| | (_| |\n",
-      "/_/   \\_\\_|  |_|\\_\\___/ \\__,_|\\__,_|\\__,_|\n",
-      "                                          \n",
-      "\n",
-      "Client Version: v2024.06.21\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -31,7 +17,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Building property graph with 50000 vertices and 1250667 edges took 7.27 seconds.\n",
+      "Building property graph with 15000 vertices and 1124429 edges took 2.71 seconds.\n",
       "Property graph created with random node and edge attributes.\n"
      ]
     }
@@ -45,9 +31,9 @@
     "import os\n",
     "import time\n",
     "\n",
-    "ak.connect(\"n33\", 5555)\n",
-    "p = 0.0005\n",
-    "num_nodes = 50_000\n",
+    "ak.connect(\"n110\", 5555)\n",
+    "p = 0.005\n",
+    "num_nodes = 15_000\n",
     "\n",
     "start = time.time()\n",
     "temp_prop_graph = ar.gnp(num_nodes, p, create_using=ar.PropGraph, seed=42)\n",
@@ -134,108 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "90900732",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import arkouda as ak\n",
-    "import arachne as ar\n",
-    "import scipy as sp\n",
-    "import networkx as nx\n",
-    "import matplotlib.pyplot as plt\n",
-    "import os\n",
-    "import time\n",
-    "\n",
-    "ak.connect(\"n33\", 5555)\n",
-    "p = 0.0005\n",
-    "num_nodes = 50_000\n",
-    "\n",
-    "# Generate graph using NetworkX\n",
-    "graph = nx.gnp_random_graph(num_nodes, p, directed=True, seed=42)\n",
-    "src_list, dst_list = zip(*graph.edges())\n",
-    "src_ak = ak.array(src_list)\n",
-    "dst_ak = ak.array(dst_list)\n",
-    "\n",
-    "start = time.time()\n",
-    "temp_prop_graph = ar.PropGraph()\n",
-    "end = time.time()\n",
-    "build_time = end - start\n",
-    "print(\"networkx graph generation....\")\n",
-    "print(f\"Building property graph with {num_nodes} vertices and \"\n",
-    "      f\"{len(src_list)} edges took {round(build_time,2)} seconds.\")\n",
-    "\n",
-    "### Generate node labels and edge relationships for the graph.\n",
-    "# 1. Extract node and edge information.\n",
-    "num_edges = len(src_list)\n",
-    "edges = (src_ak, dst_ak)\n",
-    "nodes = ak.arange(num_nodes)\n",
-    "\n",
-    "##############################################\n",
-    "# NEW SECTION: Generate random node and edge attributes\n",
-    "##############################################\n",
-    "\n",
-    "# For nodes:\n",
-    "# 2.1. Categorical from [\"blue\", \"red\", \"yellow\"]\n",
-    "colors = ak.array([\"blue\", \"red\", \"yellow\"])\n",
-    "node_colors = colors[ak.randint(0, len(colors), num_nodes)]\n",
-    "\n",
-    "# 2.2. Integer from 10 to 12 (inclusive)\n",
-    "node_ints = ak.randint(10, 13, num_nodes)\n",
-    "\n",
-    "# 2.3. Boolean from [False, True]\n",
-    "node_bools = ak.randint(0, 2, num_nodes, dtype=ak.bool)\n",
-    "\n",
-    "# For edges:\n",
-    "# 2.4. Randomly choose from [5, 10]\n",
-    "edge_ints = ak.randint(5, 11, num_edges)\n",
-    "\n",
-    "##############################################\n",
-    "# Create dataframes with the new attributes\n",
-    "##############################################\n",
-    "\n",
-    "edge_df = ak.DataFrame({\n",
-    "    \"src\": edges[0],\n",
-    "    \"dst\": edges[1],\n",
-    "    \"edge_attr\": edge_ints\n",
-    "})\n",
-    "\n",
-    "node_df = ak.DataFrame({\n",
-    "    \"nodes\": nodes,\n",
-    "    \"color\": node_colors,\n",
-    "    \"int_attr\": node_ints,\n",
-    "    \"bool_attr\": node_bools\n",
-    "})\n",
-    "\n",
-    "##############################################\n",
-    "# Create the new property graph with these attributes\n",
-    "##############################################\n",
-    "\n",
-    "prop_graph = ar.PropGraph()\n",
-    "prop_graph.load_edge_attributes(edge_df, source_column=\"src\", destination_column=\"dst\")\n",
-    "prop_graph.load_node_attributes(node_df, node_column=\"nodes\")\n",
-    "print(\"Property graph created with random node and edge attributes.\")\n",
-    "\n",
-    "### Create the subgraph we are searching for.\n",
-    "# 1. Create labels and relationships to search for.\n",
-    "src_list = [2, 3, 1, 3]\n",
-    "dst_list = [3, 1, 2, 0]\n",
-    "src_subgraph = ak.array(src_list)\n",
-    "dst_subgraph = ak.array(dst_list)\n",
-    "\n",
-    "subgraph_nodes = list(set(src_list) | set(dst_list))\n",
-    "subgraph_nodes.sort()\n",
-    "\n",
-    "labels1_subgraph = ak.array([\"blue\", \"blue\", \"red\", \"red\"])\n",
-    "labels2_subgraph = ak.array([10, 12, 10, 12])\n",
-    "labels3_subgraph = ak.array([True, True, True, True])\n",
-    "\n",
-    "rels1_subgraph = ak.array([10, 12, 10, 12])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "699b9036",
    "metadata": {},
    "outputs": [
@@ -243,7 +128,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "We found 388559.0 monos inside of the graph\n"
+      "We found 31671334.0 monos inside of the graph\n"
      ]
     }
    ],
@@ -263,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "61eb9176",
    "metadata": {},
    "outputs": [
@@ -271,7 +156,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "We found 388559.0 monos inside of the graph\n"
+      "We found 31671334.0 monos inside of the graph\n"
      ]
     }
    ],
@@ -291,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "cf714770",
    "metadata": {},
    "outputs": [
@@ -299,7 +184,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "We found 388559.0 monos inside of the graph\n"
+      "We found 31671334.0 monos inside of the graph\n"
      ]
     }
    ],
@@ -319,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "9d65961a",
    "metadata": {},
    "outputs": [
@@ -327,7 +212,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "We found 388559.0 monos inside of the graph\n"
+      "We found 31671334.0 monos inside of the graph\n"
      ]
     }
    ],
@@ -347,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "683ec7ee",
    "metadata": {},
    "outputs": [
@@ -355,7 +240,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "We found 388559.0 monos inside of the graph\n"
+      "We found 31671334.0 monos inside of the graph\n"
      ]
     }
    ],
@@ -381,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "ab9327ce",
    "metadata": {},
    "outputs": [
@@ -415,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "544c2d14",
    "metadata": {},
    "outputs": [
@@ -423,7 +308,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "We found 388559.0 monos inside of the graph\n"
+      "We found 31671334.0 monos inside of the graph\n"
      ]
     }
    ],
@@ -451,18 +336,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "2c63f26a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "We found 388559.0 monos inside of the graph\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"VF2-SI VERTEX AND EDGE PROBABILITIES AND\"\"\"\n",
     "edge_df_h = ak.DataFrame({\"src\": src_subgraph, \"dst\": dst_subgraph, \n",
@@ -513,10 +390,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "0edf75f7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "We found 31671334.0 monos inside of the graph\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"VF2-PS VERTEX AND EDGE PROBABILITIES\"\"\"\n",
     "edge_df_h = ak.DataFrame({\"src\": src_subgraph, \"dst\": dst_subgraph, \n",
@@ -534,7 +419,7 @@
     "\n",
     "isos_as_vertices = ar.subgraph_isomorphism(prop_graph, sg, \n",
     "                                           semantic_check = \"or\", algorithm_type = \"ps\", \n",
-    "                                           reorder = False, return_isos_as = \"vertices\")\n",
+    "                                           reorder = True, return_isos_as = \"vertices\")\n",
     "\n",
     "print(f\"We found {len(isos_as_vertices[0])/len(sg)} monos inside of the graph\")"
    ]
