changed reordering code

--- a/arachne/subgraph_matching_small_mesh.ipynb
+++ b/arachne/subgraph_matching_small_mesh.ipynb
@@ -46,7 +46,7 @@
    ],
    "source": [
     "# NOTE: Make sure to change the server name to whatever is applicable in your environment. If running locally, then use only ak.connect().\n",
-    "ak.connect(\"n64\", 5555)"
+    "ak.connect(\"n82\", 5555)"
    ]
   },
   {
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "ed073422",
    "metadata": {},
    "outputs": [
@@ -140,13 +140,13 @@
     "\n",
     "isos_as_vertices = ar.subgraph_isomorphism(pg, sg, \n",
     "                                           semantic_check = None, algorithm_type = \"si\", \n",
-    "                                           reorder = True, return_isos_as = \"vertices\")\n",
+    "                                           reorder_type = \"structural\", return_isos_as = \"vertices\")\n",
     "print(f\"We found {len(isos_as_vertices[0])/len(sg)} monos inside of the graph with reordering\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "97029e51",
    "metadata": {},
    "outputs": [
@@ -174,13 +174,13 @@
     "\n",
     "isos_as_vertices = ar.subgraph_isomorphism(pg, sg, \n",
     "                                           semantic_check = \"and\", algorithm_type = \"si\", \n",
-    "                                           reorder = True, return_isos_as = \"vertices\")\n",
+    "                                           reorder_type = \"probability\", return_isos_as = \"vertices\")\n",
     "print(f\"We found {len(isos_as_vertices[0])/len(sg)} monos inside of the graph with reordering\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "35198cf9",
    "metadata": {},
    "outputs": [
@@ -210,13 +210,13 @@
     "\n",
     "isos_as_vertices = ar.subgraph_isomorphism(pg, sg, \n",
     "                                           semantic_check = \"and\", algorithm_type = \"si\", \n",
-    "                                           reorder = True, return_isos_as = \"vertices\")\n",
+    "                                           reorder_type = \"probability\", return_isos_as = \"vertices\")\n",
     "print(f\"We found {len(isos_as_vertices[0])/len(sg)} monos inside of the graph with reordering\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "f5cbf9e0",
    "metadata": {},
    "outputs": [
@@ -237,13 +237,13 @@
     "\n",
     "isos_as_vertices = ar.subgraph_isomorphism(pg, sg, \n",
     "                                           semantic_check = None, algorithm_type = \"ps\", \n",
-    "                                           reorder = False, return_isos_as = \"vertices\")\n",
+    "                                           return_isos_as = \"vertices\")\n",
     "print(f\"We found {len(isos_as_vertices[0])/len(sg)} monos inside of the graph with VF2-PS\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "5a8c9225",
    "metadata": {},
    "outputs": [
@@ -271,13 +271,13 @@
     "\n",
     "isos_as_vertices = ar.subgraph_isomorphism(pg, sg, \n",
     "                                           semantic_check = \"and\", algorithm_type = \"ps\", \n",
-    "                                           reorder = False, return_isos_as = \"vertices\")\n",
+    "                                           return_isos_as = \"vertices\")\n",
     "print(f\"We found {len(isos_as_vertices[0])/len(sg)} monos inside of the graph with VF2-PS\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "55313cfc",
    "metadata": {},
    "outputs": [
@@ -307,7 +307,7 @@
     "\n",
     "isos_as_vertices = ar.subgraph_isomorphism(pg, sg, \n",
     "                                           semantic_check = \"and\", algorithm_type = \"ps\", \n",
-    "                                           reorder = False, return_isos_as = \"vertices\")\n",
+    "                                           return_isos_as = \"vertices\")\n",
     "print(f\"We found {len(isos_as_vertices[0])/len(sg)} monos inside of the graph with VF2-PS\")"
    ]
   }
