--- a/arachne/subgraph_matching_small_mesh.ipynb
+++ b/arachne/subgraph_matching_small_mesh.ipynb
@@ -2,25 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "f651e065",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    _         _                   _       \n",
-      "   / \\   _ __| | _____  _   _  __| | __ _ \n",
-      "  / _ \\ | '__| |/ / _ \\| | | |/ _` |/ _` |\n",
-      " / ___ \\| |  |   < (_) | |_| | (_| | (_| |\n",
-      "/_/   \\_\\_|  |_|\\_\\___/ \\__,_|\\__,_|\\__,_|\n",
-      "                                          \n",
-      "\n",
-      "Client Version: v2024.06.21+0.gcf6eeacde.dirty\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import arkouda as ak\n",
     "import arachne as ar\n",
@@ -32,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "671cb378",
    "metadata": {},
    "outputs": [
@@ -46,12 +31,12 @@
    ],
    "source": [
     "# NOTE: Make sure to change the server name to whatever is applicable in your environment. If running locally, then use only ak.connect().\n",
-    "ak.connect(\"n82\", 5555)"
+    "ak.connect(\"n28\", 5555)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "id": "0e3a275a",
    "metadata": {},
    "outputs": [],
@@ -84,25 +69,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "id": "f38fcded",
    "metadata": {},
    "outputs": [],
    "source": [
     "pg = ar.PropGraph()\n",
-    "pg.load_edge_attributes(edge_df, source_column=\"src\", destination_column=\"dst\")\n",
-    "pg.load_node_attributes(node_df, node_column=\"nodes\")"
+    "pg.load_edge_attributes(edge_df, source_column=\"src\", destination_column=\"dst\", convert_string_relationships_to_categoricals=False)\n",
+    "pg.load_node_attributes(node_df, node_column=\"nodes\", convert_string_labels_to_categoricals=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "id": "9aa2b97c",
    "metadata": {},
    "outputs": [],
    "source": [
     "src_list = [0, 1, 2, 1]\n",
-    "dst_list = [1, 2, 0, 3]\n",
+    "dst_list = [1, 2, 0, 3]# \n",
+    "# src_list = [0, 0, 1, 2]\n",
+    "# dst_list = [1, 3, 2, 0]\n",
     "src_subgraph = ak.array(src_list)\n",
     "dst_subgraph = ak.array(dst_list)\n",
     "\n",
@@ -119,69 +106,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "id": "ed073422",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "We found 17.0 monos inside of the graph with reordering\n"
-     ]
-    }
-   ],
-   "source": [
-    "\"\"\"VF2-SI STRUCTURAL\"\"\"\n",
-    "edge_df = ak.DataFrame({\"src\":src_subgraph, \"dst\":dst_subgraph})\n",
-    "\n",
-    "sg = ar.PropGraph()\n",
-    "sg.load_edge_attributes(edge_df, source_column=\"src\", destination_column=\"dst\", convert_string_relationships_to_categoricals=False)\n",
-    "\n",
-    "isos_as_vertices = ar.subgraph_isomorphism(pg, sg, \n",
-    "                                           semantic_check = None, algorithm_type = \"si\", \n",
-    "                                           reorder_type = \"structural\", return_isos_as = \"vertices\")\n",
-    "print(f\"We found {len(isos_as_vertices[0])/len(sg)} monos inside of the graph with reordering\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "97029e51",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "We found 0.0 monos inside of the graph with reordering\n"
-     ]
-    }
-   ],
-   "source": [
-    "\"\"\"VF2-SI VERTEX PROBABILITIES\"\"\"\n",
-    "edge_df = ak.DataFrame({\"src\":src_subgraph, \"dst\":dst_subgraph})\n",
-    "node_df = ak.DataFrame({\"nodes\":ak.array(subgraph_nodes),\n",
-    "                        \"color\":labels1_subgraph,\n",
-    "                        \"value\":labels2_subgraph,\n",
-    "                        \"True?\":labels3_subgraph,\n",
-    "                        \"cats\":labels4_subgraph\n",
-    "})\n",
-    "\n",
-    "sg = ar.PropGraph()\n",
-    "sg.load_edge_attributes(edge_df, source_column=\"src\", destination_column=\"dst\", convert_string_relationships_to_categoricals=False)\n",
-    "sg.load_node_attributes(node_df, node_column=\"nodes\", convert_string_labels_to_categoricals=False)\n",
-    "\n",
-    "isos_as_vertices = ar.subgraph_isomorphism(pg, sg, \n",
-    "                                           semantic_check = \"and\", algorithm_type = \"si\", \n",
-    "                                           reorder_type = \"probability\", return_isos_as = \"vertices\")\n",
-    "print(f\"We found {len(isos_as_vertices[0])/len(sg)} monos inside of the graph with reordering\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "35198cf9",
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +119,7 @@
     }
    ],
    "source": [
-    "\"\"\"VF2-SI VERTEX AND EDGE PROBABILITIES\"\"\"\n",
+    "\"\"\"VF2-SI STRUCTURAL + labels + rels\"\"\"\n",
     "edge_df = ak.DataFrame({\"src\":src_subgraph, \"dst\":dst_subgraph,\n",
     "                        \"value\":rels1_subgraph \n",
     "})\n",
@@ -203,112 +129,14 @@
     "                        \"True?\":labels3_subgraph,\n",
     "                        \"cats\":labels4_subgraph\n",
     "})\n",
-    "\n",
     "sg = ar.PropGraph()\n",
     "sg.load_edge_attributes(edge_df, source_column=\"src\", destination_column=\"dst\", convert_string_relationships_to_categoricals=False)\n",
     "sg.load_node_attributes(node_df, node_column=\"nodes\", convert_string_labels_to_categoricals=False)\n",
     "\n",
     "isos_as_vertices = ar.subgraph_isomorphism(pg, sg, \n",
     "                                           semantic_check = \"and\", algorithm_type = \"si\", \n",
-    "                                           reorder_type = \"probability\", return_isos_as = \"vertices\")\n",
+    "                                           reorder_type = \"structural\", return_isos_as = \"vertices\")\n",
     "print(f\"We found {len(isos_as_vertices[0])/len(sg)} monos inside of the graph with reordering\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "f5cbf9e0",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "We found 17.0 monos inside of the graph with VF2-PS\n"
-     ]
-    }
-   ],
-   "source": [
-    "\"\"\"VF2-PS STRUCTURAL\"\"\"\n",
-    "edge_df = ak.DataFrame({\"src\":src_subgraph, \"dst\":dst_subgraph})\n",
-    "\n",
-    "sg = ar.PropGraph()\n",
-    "sg.load_edge_attributes(edge_df, source_column=\"src\", destination_column=\"dst\", convert_string_relationships_to_categoricals=False)\n",
-    "\n",
-    "isos_as_vertices = ar.subgraph_isomorphism(pg, sg, \n",
-    "                                           semantic_check = None, algorithm_type = \"ps\", \n",
-    "                                           return_isos_as = \"vertices\")\n",
-    "print(f\"We found {len(isos_as_vertices[0])/len(sg)} monos inside of the graph with VF2-PS\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "5a8c9225",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "We found 0.0 monos inside of the graph with VF2-PS\n"
-     ]
-    }
-   ],
-   "source": [
-    "\"\"\"VF2-PS VERTEX PROBABILITIES\"\"\"\n",
-    "edge_df = ak.DataFrame({\"src\":src_subgraph, \"dst\":dst_subgraph})\n",
-    "node_df = ak.DataFrame({\"nodes\":ak.array(subgraph_nodes),\n",
-    "                        \"color\":labels1_subgraph,\n",
-    "                        \"value\":labels2_subgraph,\n",
-    "                        \"True?\":labels3_subgraph,\n",
-    "                        \"cats\":labels4_subgraph\n",
-    "})\n",
-    "\n",
-    "sg = ar.PropGraph()\n",
-    "sg.load_edge_attributes(edge_df, source_column=\"src\", destination_column=\"dst\", convert_string_relationships_to_categoricals=False)\n",
-    "sg.load_node_attributes(node_df, node_column=\"nodes\", convert_string_labels_to_categoricals=False)\n",
-    "\n",
-    "isos_as_vertices = ar.subgraph_isomorphism(pg, sg, \n",
-    "                                           semantic_check = \"and\", algorithm_type = \"ps\", \n",
-    "                                           return_isos_as = \"vertices\")\n",
-    "print(f\"We found {len(isos_as_vertices[0])/len(sg)} monos inside of the graph with VF2-PS\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "55313cfc",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "We found 1.0 monos inside of the graph with VF2-PS\n"
-     ]
-    }
-   ],
-   "source": [
-    "\"\"\"VF2-PS VERTEX AND EDGE PROBABILITIES\"\"\"\n",
-    "edge_df = ak.DataFrame({\"src\":src_subgraph, \"dst\":dst_subgraph,\n",
-    "                        \"value\":rels1_subgraph \n",
-    "})\n",
-    "node_df = ak.DataFrame({\"nodes\":ak.array(subgraph_nodes),\n",
-    "                        \"color\":labels1_subgraph,\n",
-    "                        \"value\":labels2_subgraph,\n",
-    "                        \"True?\":labels3_subgraph,\n",
-    "                        \"cats\":labels4_subgraph\n",
-    "})\n",
-    "\n",
-    "sg = ar.PropGraph()\n",
-    "sg.load_edge_attributes(edge_df, source_column=\"src\", destination_column=\"dst\", convert_string_relationships_to_categoricals=False)\n",
-    "sg.load_node_attributes(node_df, node_column=\"nodes\", convert_string_labels_to_categoricals=False)\n",
-    "\n",
-    "isos_as_vertices = ar.subgraph_isomorphism(pg, sg, \n",
-    "                                           semantic_check = \"and\", algorithm_type = \"ps\", \n",
-    "                                           return_isos_as = \"vertices\")\n",
-    "print(f\"We found {len(isos_as_vertices[0])/len(sg)} monos inside of the graph with VF2-PS\")"
    ]
   }
  ],
@@ -328,7 +156,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
