--- a/arachne/Hemibrain.ipynb
+++ b/arachne/Hemibrain.ipynb
@@ -2,23 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    _         _                   _       \n",
-      "   / \\   _ __| | _____  _   _  __| | __ _ \n",
-      "  / _ \\ | '__| |/ / _ \\| | | |/ _` |/ _` |\n",
-      " / ___ \\| |  |   < (_) | |_| | (_| | (_| |\n",
-      "/_/   \\_\\_|  |_|\\_\\___/ \\__,_|\\__,_|\\__,_|\n",
-      "                                          \n",
-      "\n",
-      "Client Version: v2024.06.21\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -57,13 +43,15 @@
     "print(f\"Arkouda server running with {num_locales}L and {num_pus}PUs.\")\n",
     "\n",
     "# Probabilities for node and edge attributes\n",
+    "P_Alpha = 0.55\n",
+    "P_Beta = 0.45\n",
     "node_lbl_probs = {\n",
-    "    \"lbls2\": [0.6, 0.4],  # Probabilities for integers 10 and 11\n",
-    "    \"lbls3\": [0.6, 0.4]   # Probabilities for True and False\n",
+    "    \"lbls2\": [P_Alpha, P_Beta],  # Probabilities for integers 10 and 11\n",
+    "    \"lbls3\": [P_Alpha, P_Beta]   # Probabilities for True and False\n",
     "}\n",
     "edge_rel_probs = {\n",
-    "    \"rels1\": [0.6, 0.4],  # Probabilities for integers 5 and 6\n",
-    "    \"rels2\": [0.6, 0.4]   # Probabilities for True and False\n",
+    "    \"rels1\": [P_Alpha, P_Beta],  # Probabilities for integers 5 and 6\n",
+    "    \"rels2\": [P_Alpha, P_Beta]   # Probabilities for True and False\n",
     "}\n",
     "    \n",
     "# with all 0.8, 0.2 and subgraph 11 and False and 6 and False we have 1 ISO\n",
@@ -144,8 +132,8 @@
     "\n",
     "print(\"Data loaded now we are loading the subraph....\")\n",
     "\n",
-    "src_list = [0, 1, 1]\n",
-    "dst_list = [1, 2, 0]\n",
+    "src_list = [1, 1]\n",
+    "dst_list = [0, 2]\n",
     "src_subgraph = ak.array(src_list)\n",
     "dst_subgraph = ak.array(dst_list)\n",
     "\n",
@@ -191,363 +179,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>roi</th>\n",
-       "      <th>weight</th>\n",
-       "      <th>src</th>\n",
-       "      <th>dst</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>SLP(R)</td>\n",
-       "      <td>3</td>\n",
-       "      <td>200326126</td>\n",
-       "      <td>264083994</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>ICL(R)</td>\n",
-       "      <td>2</td>\n",
-       "      <td>200326126</td>\n",
-       "      <td>295816140</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>SCL(R)</td>\n",
-       "      <td>1</td>\n",
-       "      <td>200326126</td>\n",
-       "      <td>296203440</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>SLP(R)</td>\n",
-       "      <td>2</td>\n",
-       "      <td>200326126</td>\n",
-       "      <td>325122109</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>SCL(R)</td>\n",
-       "      <td>1</td>\n",
-       "      <td>200326126</td>\n",
-       "      <td>326474963</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4259619</th>\n",
-       "      <td>SMP(R)</td>\n",
-       "      <td>1</td>\n",
-       "      <td>7112622236</td>\n",
-       "      <td>328283521</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4259620</th>\n",
-       "      <td>SMP(R)</td>\n",
-       "      <td>1</td>\n",
-       "      <td>7112622236</td>\n",
-       "      <td>357932060</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4259621</th>\n",
-       "      <td>SMP(R)</td>\n",
-       "      <td>1</td>\n",
-       "      <td>7112622236</td>\n",
-       "      <td>357940977</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4259622</th>\n",
-       "      <td>SMP(R)</td>\n",
-       "      <td>1</td>\n",
-       "      <td>7112622236</td>\n",
-       "      <td>358631450</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4259623</th>\n",
-       "      <td>SLP(R)</td>\n",
-       "      <td>1</td>\n",
-       "      <td>7112622236</td>\n",
-       "      <td>480672667</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div><p>3550403 rows x 4 columns</p>"
-      ],
-      "text/plain": [
-       "            roi  weight         src        dst\n",
-       "0        SLP(R)       3   200326126  264083994\n",
-       "1        ICL(R)       2   200326126  295816140\n",
-       "4        SCL(R)       1   200326126  296203440\n",
-       "5        SLP(R)       2   200326126  325122109\n",
-       "6        SCL(R)       1   200326126  326474963\n",
-       "...         ...     ...         ...        ...\n",
-       "4259619  SMP(R)       1  7112622236  328283521\n",
-       "4259620  SMP(R)       1  7112622236  357932060\n",
-       "4259621  SMP(R)       1  7112622236  357940977\n",
-       "4259622  SMP(R)       1  7112622236  358631450\n",
-       "4259623  SLP(R)       1  7112622236  480672667 (3550403 rows x 4 columns)"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ak_hemibrain_traced_roi_connections_sorted \n",
-    "# print(num_edges)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Weight</th>\n",
-       "      <th>Count</th>\n",
-       "      <th>Probability</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1900192</td>\n",
-       "      <td>5.352046e-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>620259</td>\n",
-       "      <td>1.747010e-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>288869</td>\n",
-       "      <td>8.136231e-02</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>165819</td>\n",
-       "      <td>4.670428e-02</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>107429</td>\n",
-       "      <td>3.025826e-02</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>380</th>\n",
-       "      <td>247</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2.816582e-07</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>381</th>\n",
-       "      <td>244</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2.816582e-07</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>382</th>\n",
-       "      <td>236</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2.816582e-07</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>383</th>\n",
-       "      <td>225</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2.816582e-07</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>384</th>\n",
-       "      <td>212</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2.816582e-07</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div><p>385 rows x 3 columns</p>"
-      ],
-      "text/plain": [
-       "     Weight    Count   Probability\n",
-       "0         1  1900192  5.352046e-01\n",
-       "1         2   620259  1.747010e-01\n",
-       "2         3   288869  8.136231e-02\n",
-       "3         4   165819  4.670428e-02\n",
-       "4         5   107429  3.025826e-02\n",
-       "..      ...      ...           ...\n",
-       "380     247        1  2.816582e-07\n",
-       "381     244        1  2.816582e-07\n",
-       "382     236        1  2.816582e-07\n",
-       "383     225        1  2.816582e-07\n",
-       "384     212        1  2.816582e-07 (385 rows x 3 columns)"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Group by the \"weight\" column and get counts for each unique weight value\n",
-    "weight_group = ak.GroupBy(ak_hemibrain_traced_roi_connections_sorted[\"weight\"])\n",
-    "unique_weights, counts = weight_group.size()\n",
-    "\n",
-    "# Calculate the total number of weights\n",
-    "total_weights = ak.sum(counts)\n",
-    "\n",
-    "# Compute probabilities for each unique weight value\n",
-    "probabilities = counts / total_weights\n",
-    "\n",
-    "# Sort by probabilities (descending order)\n",
-    "sorted_indices = ak.argsort(probabilities)  # Sort in ascending order\n",
-    "sorted_indices = sorted_indices[::-1]  # Reverse for descending order\n",
-    "\n",
-    "# Apply the sorted indices to reorder weights, counts, and probabilities\n",
-    "sorted_weights = unique_weights[sorted_indices]\n",
-    "sorted_counts = counts[sorted_indices]\n",
-    "sorted_probabilities = probabilities[sorted_indices]\n",
-    "\n",
-    "# Create a sorted DataFrame for better readability\n",
-    "sorted_weight_df = ak.DataFrame({\n",
-    "    \"Weight\": sorted_weights,\n",
-    "    \"Count\": sorted_counts,\n",
-    "    \"Probability\": sorted_probabilities\n",
-    "})\n",
-    "\n",
-    "# Display the sorted results\n",
-    "sorted_weight_df\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['EB', 'FB', 'GNG', 'IB', 'NO', 'PB', 'SAD', 'AB(L)', 'AB(R)', 'AL(L)', 'AL(R)', 'BU(L)', 'BU(R)', 'CA(R)', 'LH(R)', 'LO(R)', 'ME(R)', 'aL(L)', 'aL(R)', 'bL(L)', 'bL(R)', 'gL(L)', 'gL(R)', 'AME(R)', 'AOTU(R)', 'ATL(L)', 'ATL(R)', 'AVLP(R)', 'CAN(R)', 'CRE(L)', 'CRE(R)', 'EPA(L)', 'EPA(R)', 'FLA(R)', 'GOR(L)', 'GOR(R)', 'ICL(L)', 'ICL(R)', 'IPS(R)', 'LAL(L)', 'LAL(R)', 'LOP(R)', 'PED(R)', 'PLP(R)', 'PVLP(R)', 'SCL(L)', 'SCL(R)', 'SIP(L)', 'SIP(R)', 'SLP(R)', 'SMP(L)', 'SMP(R)', 'SPS(L)', 'SPS(R)', 'VES(L)', 'VES(R)', 'WED(R)', 'a'L(L)', 'a'L(R)', 'b'L(L)', 'b'L(R)', 'NotPrimary']\n",
-      "[1 2 3 ... 1015 1028 1409]\n",
-      "(array(['EB', 'FB', 'GNG', 'IB', 'NO', 'PB', 'SAD', 'AB(L)', 'AB(R)', 'AL(L)', 'AL(R)', 'BU(L)', 'BU(R)', 'CA(R)', 'LH(R)', 'LO(R)', 'ME(R)', 'aL(L)', 'aL(R)', 'bL(L)', 'bL(R)', 'gL(L)', 'gL(R)', 'AME(R)', 'AOTU(R)', 'ATL(L)', 'ATL(R)', 'AVLP(R)', 'CAN(R)', 'CRE(L)', 'CRE(R)', 'EPA(L)', 'EPA(R)', 'FLA(R)', 'GOR(L)', 'GOR(R)', 'ICL(L)', 'ICL(R)', 'IPS(R)', 'LAL(L)', 'LAL(R)', 'LOP(R)', 'PED(R)', 'PLP(R)', 'PVLP(R)', 'SCL(L)', 'SCL(R)', 'SIP(L)', 'SIP(R)', 'SLP(R)', 'SMP(L)', 'SMP(R)', 'SPS(L)', 'SPS(R)', 'VES(L)', 'VES(R)', 'WED(R)', 'a'L(L)', 'a'L(R)', 'b'L(L)', 'b'L(R)', 'NotPrimary']), array([57669 334506 6150 54862 23626 20900 6141 839 3638 461 59662 394 2302 56041 138693 95858 63 41 97237 1135 88248 3199 213852 1696 61311 5436 8729 222356 283 34698 89012 519 9006 184 1458 8010 3882 81216 12470 9815 86492 1245 33408 199440 219195 1479 94950 2126 104998 314774 89167 337807 10058 65117 1965 25050 46269 6 20623 2999 60094 17543]))\n",
-      "(array([1 2 3 ... 1015 1028 1409]), array([1900192 620259 288869 ... 1 1 1]))\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(ak.unique(ak_hemibrain_traced_roi_connections_sorted[\"roi\"]))\n",
-    "print(ak.unique(ak_hemibrain_traced_roi_connections_sorted[\"weight\"]))\n",
-    "print(ak.GroupBy(ak_hemibrain_traced_roi_connections_sorted[\"roi\"]).size())\n",
-    "Total = ak.GroupBy(ak_hemibrain_traced_roi_connections_sorted[\"weight\"]).size()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ROI to Integer Mapping: {'EB': 0, 'FB': 1, 'GNG': 2, 'IB': 3, 'NO': 4, 'PB': 5, 'SAD': 6, 'AB(L)': 7, 'AB(R)': 8, 'AL(L)': 9, 'AL(R)': 10, 'BU(L)': 11, 'BU(R)': 12, 'CA(R)': 13, 'LH(R)': 14, 'LO(R)': 15, 'ME(R)': 16, 'aL(L)': 17, 'aL(R)': 18, 'bL(L)': 19, 'bL(R)': 20, 'gL(L)': 21, 'gL(R)': 22, 'AME(R)': 23, 'AOTU(R)': 24, 'ATL(L)': 25, 'ATL(R)': 26, 'AVLP(R)': 27, 'CAN(R)': 28, 'CRE(L)': 29, 'CRE(R)': 30, 'EPA(L)': 31, 'EPA(R)': 32, 'FLA(R)': 33, 'GOR(L)': 34, 'GOR(R)': 35, 'ICL(L)': 36, 'ICL(R)': 37, 'IPS(R)': 38, 'LAL(L)': 39, 'LAL(R)': 40, 'LOP(R)': 41, 'PED(R)': 42, 'PLP(R)': 43, 'PVLP(R)': 44, 'SCL(L)': 45, 'SCL(R)': 46, 'SIP(L)': 47, 'SIP(R)': 48, 'SLP(R)': 49, 'SMP(L)': 50, 'SMP(R)': 51, 'SPS(L)': 52, 'SPS(R)': 53, 'VES(L)': 54, 'VES(R)': 55, 'WED(R)': 56, \"a'L(L)\": 57, \"a'L(R)\": 58, \"b'L(L)\": 59, \"b'L(R)\": 60, 'NotPrimary': 61}\n",
-      "Updated ROI Column: [49 37 46 ... 51 51 49]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Extract unique ROI strings\n",
-    "unique_rois = ak.unique(ak_hemibrain_traced_roi_connections_sorted[\"roi\"])\n",
-    "\n",
-    "# Create a mapping from each unique ROI string to an integer\n",
-    "roi_to_int = {roi: i for i, roi in enumerate(unique_rois.to_ndarray())}\n",
-    "\n",
-    "# Map the ROI strings in the dataframe to integers\n",
-    "roi_as_int = ak.array([roi_to_int[roi] for roi in ak_hemibrain_traced_roi_connections_sorted[\"roi\"].to_ndarray()])\n",
-    "\n",
-    "# Replace the \"roi\" column with its integer representation\n",
-    "ak_hemibrain_traced_roi_connections_sorted[\"roi\"] = roi_as_int\n",
-    "\n",
-    "# Display the mapping for reference\n",
-    "print(\"ROI to Integer Mapping:\", roi_to_int)\n",
-    "\n",
-    "# Verify the updated dataframe\n",
-    "print(\"Updated ROI Column:\", ak_hemibrain_traced_roi_connections_sorted[\"roi\"])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "We found 8119.0 monos inside of the graph\n"
+      "We found 341310.0 monos inside of the graph\n"
      ]
     }
    ],
@@ -562,14 +201,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "We found 8119.0 monos inside of the graph\n"
+      "We found 0.0 monos inside of the graph\n"
      ]
     }
    ],
@@ -584,17 +223,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "We found 8119.0 monos inside of the graph\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"VF2-PS DEFAULT\"\"\"\n",
     "isos_as_vertices = ar.subgraph_isomorphism(prop_graph, subgraph, \n",
@@ -607,49 +238,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "We found 8119.0 monos inside of the graph\n"
-     ]
-    }
-   ],
-   "source": [
-    "\"\"\"VF2-PS MVE-REORDERING\"\"\"\n",
-    "isos_as_vertices = ar.subgraph_isomorphism(prop_graph, subgraph, \n",
-    "                                           semantic_check = \"and\", algorithm_type = \"ps\", \n",
-    "                                           reorder_type = \"structural\", return_isos_as = \"vertices\")\n",
-    "\n",
-    "print(f\"We found {len(isos_as_vertices[0])/len(subgraph)} monos inside of the graph\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Property Graph Edges:\n",
-      "DataFrame(['src', 'dst', 'rels1', 'rels2'], 3,550,403 rows, 117163299.00 B)\n",
-      "\n",
-      "Property Graph Nodes:\n",
-      "DataFrame(['nodes', 'lbls2', 'lbls3'], 21,739 rows, 543475.00 B)\n",
-      "\n",
-      "Subgraph Edges:\n",
-      "DataFrame(['src', 'dst', 'rels1', 'rels2'], 3 rows, 99.00 B)\n",
-      "\n",
-      "Subgraph Nodes:\n",
-      "DataFrame(['nodes', 'lbls2', 'lbls3'], 3 rows, 75.00 B)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Print property graph DataFrames\n",
     "print(\"Property Graph Edges:\")\n",
