fixed edge probability corner case

--- a/arachne/Hemibrain.ipynb
+++ b/arachne/Hemibrain.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -19,9 +19,7 @@
       "Arkouda server running with 1L and 128PUs.\n",
       "Index(['roi', 'weight', 'src', 'dst'], dtype='<U0')\n",
       "Property graph created with fixed node (lbls2=10, lbls3=True) and edge attributes (rels1=5, rels2=True).\n",
-      "Data loaded now we are loading the subraph....\n",
-      "Subgraph created with fixed node and edge attributes.\n",
-      " Run Arachne....\n"
+      "Data loaded now we are loading the subraph....\n"
      ]
     }
    ],
@@ -34,7 +32,7 @@
     "import random\n",
     "import argparse\n",
     "\n",
-    "ak.connect(\"n82\", 5555)\n",
+    "ak.connect(\"n116\", 5555)\n",
     "\n",
     "### Get Arkouda server configuration information.\n",
     "config = ak.get_config()\n",
@@ -132,8 +130,26 @@
     "\n",
     "print(\"Data loaded now we are loading the subraph....\")\n",
     "\n",
-    "src_list = [1, 1]\n",
-    "dst_list = [0, 2]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Subgraph created with fixed node and edge attributes.\n",
+      " Run Arachne....\n"
+     ]
+    }
+   ],
+   "source": [
+    "src_list = [0, 2]\n",
+    "dst_list = [1, 1]\n",
     "src_subgraph = ak.array(src_list)\n",
     "dst_subgraph = ak.array(dst_list)\n",
     "\n",
@@ -171,22 +187,19 @@
     "\n",
     "\n",
     "print(\"Subgraph created with fixed node and edge attributes.\")\n",
-    "\n",
-    "\n",
-    "\n",
-    "print(\" Run Arachne....\")\n"
+    "print(\" Run Arachne....\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "We found 341310.0 monos inside of the graph\n"
+      "We found 0.0 monos inside of the graph\n"
      ]
     }
    ],
@@ -201,14 +214,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "We found 0.0 monos inside of the graph\n"
+      "We found 312236.0 monos inside of the graph\n"
      ]
     }
    ],
@@ -223,9 +236,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "We found 327050.0 monos inside of the graph\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"VF2-PS DEFAULT\"\"\"\n",
     "isos_as_vertices = ar.subgraph_isomorphism(prop_graph, subgraph, \n",
@@ -252,8 +273,7 @@
     "print(\"\\nSubgraph Edges:\")\n",
     "print(edge_df_h)\n",
     "print(\"\\nSubgraph Nodes:\")\n",
-    "print(node_df_h)\n",
-    "\n"
+    "print(node_df_h)"
    ]
   }
  ],
