After Celegan tests

--- a/arachne/Hemibrain.ipynb
+++ b/arachne/Hemibrain.ipynb
@@ -2,9 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    _         _                   _       \n",
+      "   / \\   _ __| | _____  _   _  __| | __ _ \n",
+      "  / _ \\ | '__| |/ / _ \\| | | |/ _` |/ _` |\n",
+      " / ___ \\| |  |   < (_) | |_| | (_| | (_| |\n",
+      "/_/   \\_\\_|  |_|\\_\\___/ \\__,_|\\__,_|\\__,_|\n",
+      "                                          \n",
+      "\n",
+      "Client Version: v2024.06.21\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -32,7 +46,7 @@
     "import random\n",
     "import argparse\n",
     "\n",
-    "ak.connect(\"n116\", 5555)\n",
+    "ak.connect(\"n82\", 5555)\n",
     "\n",
     "### Get Arkouda server configuration information.\n",
     "config = ak.get_config()\n",
@@ -135,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -148,8 +162,8 @@
     }
    ],
    "source": [
-    "src_list = [0, 2]\n",
-    "dst_list = [1, 1]\n",
+    "src_list = [0, 1, 1, 0, 2]\n",
+    "dst_list = [1, 0, 2, 2, 0]\n",
     "src_subgraph = ak.array(src_list)\n",
     "dst_subgraph = ak.array(dst_list)\n",
     "\n",
@@ -192,14 +206,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "We found 0.0 monos inside of the graph\n"
+      "We found 115.0 monos inside of the graph\n"
      ]
     }
    ],
@@ -214,14 +228,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "We found 312236.0 monos inside of the graph\n"
+      "We found 115.0 monos inside of the graph\n"
      ]
     }
    ],
@@ -236,14 +250,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "We found 327050.0 monos inside of the graph\n"
+      "We found 115.0 monos inside of the graph\n"
      ]
     }
    ],
@@ -259,9 +273,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Property Graph Edges:\n",
+      "DataFrame(['src', 'dst', 'rels1', 'rels2'], 3,550,403 rows, 117163299.00 B)\n",
+      "\n",
+      "Property Graph Nodes:\n",
+      "DataFrame(['nodes', 'lbls2', 'lbls3'], 21,739 rows, 543475.00 B)\n",
+      "\n",
+      "Subgraph Edges:\n",
+      "DataFrame(['src', 'dst', 'rels1', 'rels2'], 5 rows, 165.00 B)\n",
+      "\n",
+      "Subgraph Nodes:\n",
+      "DataFrame(['nodes', 'lbls2', 'lbls3'], 3 rows, 75.00 B)\n"
+     ]
+    }
+   ],
    "source": [
     "# Print property graph DataFrames\n",
     "print(\"Property Graph Edges:\")\n",
